@@ -29,12 +29,8 @@ BOOTPICS=boot/i386/pics
 SPLASH_RLE=klowner.rle
 
 # Create a bootable image.
-# 1. make a dos filesystem image
-# 2. copy over kernel, initrd
-# 3. install syslinux
-# 4. compress the image (if requested)
 .PHONY: arch_boot
-arch_boot:
+arch_boot: arch_boot_screens
 	[ ! -x "$(UPX)" ] || $(UPX) -9 $(TEMP_KERNEL) || true
 	mkfs.msdos -i $(DOS_VOLUME_ID) -n $(DOS_VOLUME_LABEL) -C $(TEMP_BOOT) $(FLOPPY_SIZE)
 	# mkfs.msdos gets the mode wrong (bug filed)
@@ -50,12 +46,9 @@ arch_boot:
 	# syslinux is used to make the floppy bootable
 	cat boot/i386/syslinux.cfg | todos | mcopy -i$(TEMP_BOOT) - ::syslinux.cfg
 	set -e; \
-	$(foreach IMG,$(wildcard boot/i386/*.txt), \
-		./bootscreen-subst "$(MEDIA_TYPE)" "$(DEBIAN_VERSION)" "$(BUILD_DATE)" \
-		       < $(IMG) | mcopy -i$(TEMP_BOOT) - ::`basename $(IMG)`;)
-	if [ -n "$(SPLASH_RLE)" ]; then \
-		mcopy -i$(TEMP_BOOT) $(BOOTPICS)/$(SPLASH_RLE) ::splash.rle; \
-	fi
+	$(foreach file,$(wildcard $(TEMP_BOOT_SCREENS)/*), \
+		mcopy -i$(TEMP_BOOT) $(file) ::`basename $(file)` \
+	;)
 	syslinux $(SYSLINUX_OPTS) $(TEMP_BOOT)
 	$(if $(GZIPPED),gzip -v9f $(TEMP_BOOT))
 
@@ -73,22 +66,29 @@ arch_root:
 	mcopy -i$(TEMP_ROOT) $(TEMP)/disk.lbl ::disk.lbl
 	$(if $(GZIPPED),gzip -v9f $(TEMP_ROOT))
 
-# Create syslinux/isolinux help screens for debian-cd to use, and include
-# a boot logo too.
-.PHONY: arch_debian_cd_info
-arch_debian_cd_info:
-	rm -f $(TEMP_DEBIAN_CD_INFO)/* || true
-	mkdir -p $(TEMP_DEBIAN_CD_INFO)
+# Set up syslinux/isolinux help screens.
+.PHONY: arch_boot_screens
+arch_boot_screens:
+	rm -f $(TEMP_BOOT_SCREENS)/* || true
+	mkdir -p $(TEMP_BOOT_SCREENS)
 	$(foreach IMG,$(wildcard boot/i386/*.txt), \
 		./bootscreen-subst "$(MEDIA_TYPE)" "$(DEBIAN_VERSION)" "$(BUILD_DATE)" \
-		       < $(IMG) > $(TEMP_DEBIAN_CD_INFO)/`basename $(IMG)`;)
+		       < $(IMG) > $(TEMP_BOOT_SCREENS)/`basename $(IMG)`\
+	;)
 	if [ -n "$(SPLASH_RLE)" ]; then \
-		cp $(BOOTPICS)/$(SPLASH_RLE) $(TEMP_DEBIAN_CD_INFO)/splash.rle; \
+		cp $(BOOTPICS)/$(SPLASH_RLE) $(TEMP_BOOT_SCREENS)/splash.rle; \
 	fi
 
-# Miniature CD image with only boot image on it.
+# Miniature CD image using isolinux, with only an initrd, no udebs or debs.
 .PHONY: arch_miniiso
-arch_miniiso:
-	mkdir -p $(CD_IMAGE_TREE)
-	ln -f $(TEMP_BOOT) $(CD_IMAGE_TREE)/boot.img
-	mkisofs -r -J -b `basename $(TEMP_BOOT)` -o $(TEMP_MINIISO) $(CD_IMAGE_TREE)
+arch_miniiso: arch_boot_screens
+	rm -f $(TEMP_CD_TREE)/*
+	mkdir -p $(TEMP_CD_TREE)
+	cp /usr/lib/syslinux/isolinux.bin $(TEMP_CD_TREE)
+	cp $(TEMP_BOOT_SCREENS)/* $(TEMP_CD_TREE)
+	cp $(TEMP)/$(KERNELNAME) $(TEMP_CD_TREE)/linux
+	cat boot/i386/syslinux.cfg | todos > $(TEMP_CD_TREE)/isolinux.cfg
+	ln -f $(TEMP_INITRD) $(TEMP_CD_TREE)/initrd.gz
+	mkisofs -r -J -b isolinux.bin -c boot.cat \
+		-no-emul-boot -boot-load-size 4 -boot-info-table \
+		-o $(TEMP_MINIISO) $(TEMP_CD_TREE)
